Import of DLAND/Integer-Partition-0.03 from CPAN.
gitpan-cpan-distribution: Integer-Partition
gitpan-cpan-version:      0.03
gitpan-cpan-path:         DLAND/Integer-Partition-0.03.tar.gz
gitpan-cpan-author:       DLAND
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-The file is the README for Integer::Partition version 0.02
+The file is the README for Integer::Partition version 0.03
 
 INSTALLATION
 
@@ -38,7 +38,7 @@ use Integer::Partition;
 my $i = Integer::Partition->new(6);
 
 while (my $p = $i->next) {
-    print join( ' ', map { "@$_" } @$p ), $/;
+    print join( ' ', @$p ), $/;
 }
 
 # prints:
