Import of DLAND/Integer-Partition-0.05 from CPAN.
gitpan-cpan-distribution: Integer-Partition
gitpan-cpan-version:      0.05
gitpan-cpan-path:         DLAND/Integer-Partition-0.05.tar.gz
gitpan-cpan-author:       DLAND
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-The file is the README for Integer::Partition version 0.03
+The file is the README for Integer::Partition version 0.05
 
 INSTALLATION
 
@@ -71,7 +71,7 @@ David Landgren
 
 COPYRIGHT
 
-This module is copyright (C) David Landgren 2007.
+This module is copyright (C) David Landgren 2007-2013.
 All rights reserved.
 
 LICENSE
